--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -21,9 +21,11 @@
         #td1 {
             padding-left: 15px;
             padding-right: 15px;
+            width: 20%;
         }
         #td2 {
             padding: 30px 30px 30px 30px;
+            width: 80%;
         }
         #title {
             font-weight: bold;
